# am-i-exposed

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.umbrel  LICENSE  README.md  TODO-custom-api.md  docker-compose.test.yml  eslint.config.mjs  onion.md  package.json  playwright.config.ts  pnpm-lock.yaml  privacy_engine.md  testing.md  umbrel.md  vitest.config.hooks.ts  vitest.config.ts
boltzmann-rs/: Cargo.toml
boltzmann-rs/benches/: boltzmann_bench.rs
boltzmann-rs/src/: analyze.rs  backtrack.rs  joinmarket.rs  lib.rs  partition.rs  subset_sum.rs  time.rs  types.rs
boltzmann-rs/tests/: known_txs.rs  wasm_serialization.rs
cli/: .pnpm-approvals.json  README.md  build.mjs  package.json  pnpm-lock.yaml  skill.md
docs/: README.md  TODO.md  adr-boltzmann-wasm.md  adr-indexeddb-cache.md  adr-oxt-graph.md  adr-recommendations.md  development-guide.md  privacy-engine.md  research-boltzmann-entropy.md  spec-advanced-features.md  spec-cli-tool.md  spec-custom-api-endpoint.md  testing-reference.md  testing.md  todo_charts.md  xpub-analysis.md
e2e/: boltzmann-heatmap.spec.ts  hash-routing.spec.ts  input-form.spec.ts  scan-address.spec.ts  scan-tx.spec.ts
public/: CNAME  manifest.json  offline.html  robots.txt  sitemap.xml  sw.js
scripts/: build-boltzmann-wasm.sh  build-entity-filter.mjs  capture-fixtures.mjs  enrich-entity-samples.mjs  generate-sitemap.mjs  live-probe-detect-network.mjs  scrape-exchange-addresses.py  scrape-walletexplorer.py  screenshot.mjs  test-engine.mjs  wallet-scan-screenshot.mjs  wallet-screenshot.mjs
umbrel/: nginx.conf.template
(+471 files in other folders)
